samples/_failures_safe/1761721002_1eb727_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ddec17c.c: In function ‘main’:
./samples/SAFE/__tmp_6ddec17c.c:146:22: error: incompatible types when initializing type ‘double’ using type ‘double (*)(const Matrix *)’
  146 |         double det = compute_determinant
      |                      ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6ddec17c.c:146:9: error: expected ‘,’ or ‘;’ at end of input
  146 |         double det = compute_determinant
      |         ^~~~~~
./samples/SAFE/__tmp_6ddec17c.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6ddec17c.c:146:9: error: expected declaration or statement at end of input
